# T8Espectro

./: .gitignore  README.md  pyproject.toml
t8espectro/: espectro.py  espectro_calculado.py  espectro_generado.py  onda_generada.py  principal.py
tests/: test_espectro_calculado.py
